letter spacing fixes

--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -75,7 +75,6 @@
   z-index: 1;
   font-size: var(--fs-hero);
   font-family: var(--ff-title);
-  letter-spacing: (1em / 16);
   text-align: center;
   text-transform: uppercase;
   color: var(--color-page-title);
