--- a/src/assets/scss/components/_site-header.scss
+++ b/src/assets/scss/components/_site-header.scss
@@ -33,12 +33,11 @@
 }
 
 .site-header__title {
-  --wght: var(--fw-bold);
+  --wght: var(--fw-medium);
 
   display: inline-block;
   line-height: var(--lh-title);
   text-decoration: none;
-  letter-spacing: (1em / 32);
 }
 
 .site-header__menu-toggle {
