--- a/src/assets/scss/globals/_typography.scss
+++ b/src/assets/scss/globals/_typography.scss
@@ -82,7 +82,7 @@ h5 {
   margin-top: $small-spacing;
   margin-bottom: $tiny-spacing;
   font-size: var(--fs-body);
-  letter-spacing: (1em / 32);
+  letter-spacing: (1em / 16);
   text-transform: uppercase;
   color: var(--color-text-alt);
 }
